--- a/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWvotingRulesView.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWvotingRulesView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,26 +14,12 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="投票规则" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Gs-fT-WjF">
-                    <rect key="frame" x="154.5" y="183" width="66" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Gs-fT-WjF">
+                    <rect key="frame" x="180.5" y="183" width="14.5" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="L7L-oh-g1j"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Zk-Ba-xiP">
-                    <rect key="frame" x="43.5" y="232" width="288" height="99"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="99" id="Don-4z-VRl"/>
-                        <constraint firstAttribute="width" constant="288" id="N74-yV-Jqe"/>
-                    </constraints>
-                    <string key="text">参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；
-
-
-每次投票最多可选择 30 个超级节点，撤销或更改再次投票生效有</string>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -59,24 +45,52 @@
                         <constraint firstAttribute="height" constant="6" id="KqF-lQ-v3u"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wbz-Sj-C1z">
+                    <rect key="frame" x="295" y="30" width="50" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="8QO-3M-oZl"/>
+                        <constraint firstAttribute="width" constant="50" id="L6F-ia-3I6"/>
+                    </constraints>
+                    <state key="normal" image="window_54_close"/>
+                    <connections>
+                        <action selector="closeViewEvent:" destination="iN0-l3-epB" eventType="touchUpInside" id="L1c-NF-J9f"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRZ-7p-dfb">
+                    <rect key="frame" x="43.5" y="232" width="288" height="99"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="288" id="A6v-Vg-cuR"/>
+                        <constraint firstAttribute="height" constant="99" id="O6V-58-JLl"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.7970145089285714" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="4Zk-Ba-xiP" firstAttribute="leading" secondItem="9ua-8I-xRi" secondAttribute="trailing" constant="8.5" id="46Z-4X-PRG"/>
-                <constraint firstItem="4Zk-Ba-xiP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7k8-mr-HGW"/>
+                <constraint firstItem="Wbz-Sj-C1z" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="30" id="1cJ-dh-AxE"/>
+                <constraint firstItem="wRZ-7p-dfb" firstAttribute="top" secondItem="0Gs-fT-WjF" secondAttribute="bottom" constant="33" id="7M8-NA-td9"/>
+                <constraint firstItem="PaK-Du-DYh" firstAttribute="centerX" secondItem="9ua-8I-xRi" secondAttribute="centerX" id="Clr-mv-zn4"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Wbz-Sj-C1z" secondAttribute="trailing" constant="30" id="Kcz-yA-KvY"/>
+                <constraint firstItem="wRZ-7p-dfb" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ly5-kw-cXA"/>
                 <constraint firstItem="0Gs-fT-WjF" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mbn-Pf-ce0"/>
                 <constraint firstItem="PaK-Du-DYh" firstAttribute="top" secondItem="9ua-8I-xRi" secondAttribute="bottom" constant="57" id="T4n-Z4-RDL"/>
-                <constraint firstItem="4Zk-Ba-xiP" firstAttribute="leading" secondItem="PaK-Du-DYh" secondAttribute="trailing" constant="8.5" id="d8B-pG-MJf"/>
+                <constraint firstItem="9ua-8I-xRi" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="29" id="cBZ-Iy-DGh"/>
+                <constraint firstItem="wRZ-7p-dfb" firstAttribute="leading" secondItem="9ua-8I-xRi" secondAttribute="trailing" constant="8.5" id="hgQ-HT-Wug"/>
                 <constraint firstItem="0Gs-fT-WjF" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="183" id="jVe-zx-5Uc"/>
                 <constraint firstItem="9ua-8I-xRi" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="240" id="jxg-wm-Vuy"/>
-                <constraint firstItem="4Zk-Ba-xiP" firstAttribute="top" secondItem="0Gs-fT-WjF" secondAttribute="bottom" constant="33" id="xvD-Qb-tCh"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="closeButton" destination="Wbz-Sj-C1z" id="a7F-CY-itm"/>
                 <outlet property="lab1" destination="0Gs-fT-WjF" id="Lxx-e2-4k5"/>
-                <outlet property="lab2" destination="4Zk-Ba-xiP" id="AmY-wB-hU5"/>
+                <outlet property="labInfo" destination="wRZ-7p-dfb" id="4Rr-3I-wnl"/>
             </connections>
             <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
         </view>
     </objects>
+    <resources>
+        <image name="window_54_close" width="16" height="16"/>
+    </resources>
 </document>
