CR The decimal point
Former-commit-id: 776ceec3f93b86818912d951299fbe38f706f731

--- a/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWinputVotesPopupWindowView.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWinputVotesPopupWindowView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -95,7 +93,7 @@
                             <rect key="frame" x="87.5" y="48" width="222.5" height="52"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aNa-tP-EJZ">
                             <rect key="frame" x="310" y="50" width="60" height="50"/>
@@ -156,6 +154,7 @@
                 <outlet property="theNextStepButton" destination="M3g-4e-yIs" id="v3m-tV-Ems"/>
                 <outlet property="titleLab" destination="SXF-TZ-3b0" id="tVk-dY-x9t"/>
             </connections>
+            <point key="canvasLocation" x="138" y="154"/>
         </view>
     </objects>
     <resources>
