--- a/UnionSquare.iOS/ELA/found/SuperPoint/view/nodeInformationDetailsView.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/view/nodeInformationDetailsView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -58,27 +56,28 @@
                         <constraint firstAttribute="height" constant="1" id="GGd-GF-bch"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZe-AK-nDy">
-                    <rect key="frame" x="0.0" y="52" width="414" height="0.0"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wU2-RQ-IiB">
+                    <rect key="frame" x="15" y="52" width="384" height="233"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="xNn-Rd-k2t" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Awb-Nr-UVU"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="wU2-RQ-IiB" secondAttribute="bottom" id="DCr-2Y-lMU"/>
                 <constraint firstItem="DId-Pz-0RZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="HlF-DF-VIX"/>
                 <constraint firstItem="C7g-NE-jli" firstAttribute="width" secondItem="xNn-Rd-k2t" secondAttribute="width" id="IrR-zY-i5p"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="IZe-AK-nDy" secondAttribute="bottom" constant="10" id="OV5-PD-jdT"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="wU2-RQ-IiB" secondAttribute="trailing" constant="15" id="LKd-OB-lyz"/>
                 <constraint firstItem="C7g-NE-jli" firstAttribute="leading" secondItem="xNn-Rd-k2t" secondAttribute="trailing" id="QFX-av-5mw"/>
                 <constraint firstItem="xNn-Rd-k2t" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Qte-1H-W7a"/>
-                <constraint firstItem="IZe-AK-nDy" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="cfE-0I-eCU"/>
                 <constraint firstItem="DId-Pz-0RZ" firstAttribute="centerX" secondItem="C7g-NE-jli" secondAttribute="centerX" id="cs1-y3-M4K"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="C7g-NE-jli" secondAttribute="trailing" id="fYj-y2-TcB"/>
                 <constraint firstItem="C7g-NE-jli" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="gCR-Y6-1pc"/>
-                <constraint firstItem="IZe-AK-nDy" firstAttribute="top" secondItem="xNn-Rd-k2t" secondAttribute="bottom" id="gpS-c4-GZm"/>
-                <constraint firstAttribute="trailing" secondItem="IZe-AK-nDy" secondAttribute="trailing" id="uAf-nu-atd"/>
+                <constraint firstItem="wU2-RQ-IiB" firstAttribute="top" secondItem="xNn-Rd-k2t" secondAttribute="bottom" id="msU-ah-4Rb"/>
+                <constraint firstItem="wU2-RQ-IiB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="15" id="oLA-PO-X5V"/>
                 <constraint firstItem="x7D-A5-NLW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="vpQ-R3-rM6"/>
                 <constraint firstItem="x7D-A5-NLW" firstAttribute="centerX" secondItem="xNn-Rd-k2t" secondAttribute="centerX" id="wrf-tb-DnJ"/>
             </constraints>
@@ -89,7 +88,7 @@
                 <outlet property="ForInformationView" destination="DId-Pz-0RZ" id="Rba-DM-kT9"/>
                 <outlet property="IntroductionOfNodeButton" destination="C7g-NE-jli" id="r2I-iF-Kcd"/>
                 <outlet property="IntroductionOfNodeView" destination="x7D-A5-NLW" id="uYA-Lf-KaB"/>
-                <outlet property="infoLable" destination="IZe-AK-nDy" id="Fxm-Gd-ZDo"/>
+                <outlet property="infoTextView" destination="wU2-RQ-IiB" id="2gg-dc-hRN"/>
             </connections>
             <point key="canvasLocation" x="124.6376811594203" y="35.825892857142854"/>
         </view>
