--- a/UnionSquare.iOS/ELA/Wallet/walletManage/view/HWMTheValidationWordMnemonicPassword.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletManage/view/HWMTheValidationWordMnemonicPassword.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,8 +17,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mXI-2L-wTn">
                     <rect key="frame" x="72" y="373" width="270" height="150"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="验证助记词密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bos-Pw-akv">
-                            <rect key="frame" x="77.5" y="14" width="115" height="20"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="验证助记词密码" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bos-Pw-akv">
+                            <rect key="frame" x="15" y="14" width="216" height="20"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -43,7 +41,7 @@
                             </constraints>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                         <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vwE-E7-41f">
                             <rect key="frame" x="15" y="89.5" width="240" height="1"/>
@@ -104,12 +102,14 @@
                         <constraint firstAttribute="height" constant="150" id="Ydq-M1-sYa"/>
                         <constraint firstItem="alv-vV-8TT" firstAttribute="centerY" secondItem="Bos-Pw-akv" secondAttribute="centerY" id="b42-zp-lkE"/>
                         <constraint firstAttribute="trailing" secondItem="alv-vV-8TT" secondAttribute="trailing" id="dHL-FM-9LZ"/>
+                        <constraint firstItem="Bos-Pw-akv" firstAttribute="leading" secondItem="mXI-2L-wTn" secondAttribute="leading" constant="15" id="eN7-fu-bp4"/>
                         <constraint firstAttribute="trailing" secondItem="vwE-E7-41f" secondAttribute="trailing" constant="15" id="jEU-eR-MYw"/>
                         <constraint firstItem="Bos-Pw-akv" firstAttribute="centerX" secondItem="mXI-2L-wTn" secondAttribute="centerX" id="jSJ-fY-sZ1"/>
                         <constraint firstAttribute="width" constant="270" id="kHt-r3-hQi"/>
                         <constraint firstItem="Z5X-ZJ-5Uh" firstAttribute="leading" secondItem="mXI-2L-wTn" secondAttribute="leading" id="mem-1Q-EFE"/>
                         <constraint firstItem="lvy-yB-L1S" firstAttribute="leading" secondItem="mXI-2L-wTn" secondAttribute="leading" constant="15" id="rve-HL-ona"/>
                         <constraint firstItem="vwE-E7-41f" firstAttribute="leading" secondItem="mXI-2L-wTn" secondAttribute="leading" constant="15" id="sMy-yK-7QJ"/>
+                        <constraint firstAttribute="trailing" secondItem="Bos-Pw-akv" secondAttribute="trailing" constant="39" id="wQu-Yk-Tyr"/>
                     </constraints>
                 </view>
             </subviews>
