--- a/UnionSquare.iOS/ELA/found/CRElection/view/HWMVoteTheEditorialBoardTableViewCell.xib
+++ b/UnionSquare.iOS/ELA/found/CRElection/view/HWMVoteTheEditorialBoardTableViewCell.xib
@@ -27,9 +27,10 @@
                                     <constraint firstAttribute="height" constant="15" id="rEd-27-nBZ"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="委员名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mM8-wU-Dn9">
-                                <rect key="frame" x="50" y="20" width="130.5" height="13"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="委员名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mM8-wU-Dn9">
+                                <rect key="frame" x="50" y="20" width="53.5" height="13"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="130.5" id="Fv2-Qb-bY4"/>
                                     <constraint firstAttribute="height" constant="13" id="dFG-ZF-yCo"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -54,18 +55,15 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="found_vote_point_location" translatesAutoresizingMaskIntoConstraints="NO" id="acP-U3-kzR">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="found_vote_point_location" translatesAutoresizingMaskIntoConstraints="NO" id="acP-U3-kzR">
                                 <rect key="frame" x="190.5" y="20" width="10" height="13"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="10" id="5A8-P2-5Od"/>
                                     <constraint firstAttribute="height" constant="13" id="HC0-gz-knK"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="当前排名：12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQz-kQ-B5h">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前排名：12" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQz-kQ-B5h">
                                 <rect key="frame" x="206.5" y="20" width="68.5" height="13.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="5eI-qR-WYJ"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -116,7 +114,6 @@
                             <constraint firstAttribute="bottom" secondItem="6jS-x5-QYc" secondAttribute="bottom" constant="15" id="55m-nC-XmV"/>
                             <constraint firstItem="OOI-h5-coS" firstAttribute="leading" secondItem="mM8-wU-Dn9" secondAttribute="leading" id="5Hl-JW-v0J"/>
                             <constraint firstItem="acP-U3-kzR" firstAttribute="centerY" secondItem="mM8-wU-Dn9" secondAttribute="centerY" id="Dj4-pl-pn4"/>
-                            <constraint firstItem="acP-U3-kzR" firstAttribute="leading" secondItem="mM8-wU-Dn9" secondAttribute="trailing" constant="10" id="Dk1-ri-V6h"/>
                             <constraint firstItem="3Zn-kD-qWe" firstAttribute="leading" secondItem="mM8-wU-Dn9" secondAttribute="leading" id="EXE-ao-vzf"/>
                             <constraint firstItem="gQz-kQ-B5h" firstAttribute="leading" secondItem="acP-U3-kzR" secondAttribute="trailing" constant="6" id="F8Y-Qb-SRR"/>
                             <constraint firstItem="mM8-wU-Dn9" firstAttribute="top" secondItem="ZsF-N8-emB" secondAttribute="top" constant="20" id="FW2-Na-ovE"/>
